// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate-html generates empty html page when no employee provided 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"https://use.fontawesome.com/releases/v5.8.2/css/all.css\\"
      integrity=\\"sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay\\"
      crossorigin=\\"anonymous\\"
    />
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css\\"
    />
    <title>My Team</title>
  </head>
  <body>
    <header class=\\"mb-5\\">
      <nav class=\\"navbar bg-primary\\">
        <div class=\\"container-fluid justify-content-center\\">
          <h1 class=\\"mb-3 text-center text-light\\">My Team</h1>
        </div>
      </nav>
    </header>
    <main class=\\"container-fluid\\">
      <section class=\\"row justify-content-center\\"></section>
    </main>
  </body>
</html>
"
`;

exports[`generate-html generates html with employee cards when employee detail is provided 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <link
      rel=\\"stylesheet\\"
      href=\\"https://use.fontawesome.com/releases/v5.8.2/css/all.css\\"
      integrity=\\"sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay\\"
      crossorigin=\\"anonymous\\"
    />
    <link
      rel=\\"stylesheet\\"
      href=\\"https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css\\"
    />
    <title>My Team</title>
  </head>
  <body>
    <header class=\\"mb-5\\">
      <nav class=\\"navbar bg-primary\\">
        <div class=\\"container-fluid justify-content-center\\">
          <h1 class=\\"mb-3 text-center text-light\\">My Team</h1>
        </div>
      </nav>
    </header>
    <main class=\\"container-fluid\\">
      <section class=\\"row justify-content-center\\">
        <div class=\\"card col-sm-10 col-md-5 col-lg-3 mr-2 mb-3 p-0\\">
          <div class=\\"card-header bg-primary text-light\\">
            <h3>kshetri</h3>
            <h5><i class=\\"fas fa-theater-masks\\"></i> Manager</h5>
          </div>
          <ul class=\\"list-group list-group-flush\\">
            <li class=\\"list-group-item\\">ID: 001</li>
            <li class=\\"list-group-item\\">
              Email:<a href=\\"mailto:kshetri@email.com\\" target=\\"_blank\\">
                kshetri@email.com</a
              >
            </li>
            <li class=\\"list-group-item\\">OfficeNumber: 04123456</li>
          </ul>
        </div>

        <div class=\\"card col-sm-10 col-md-5 col-lg-3 mr-2 mb-3 p-0\\">
          <div class=\\"card-header bg-primary text-light\\">
            <h3>sam</h3>
            <h5><i class=\\"fas fa-hard-hat\\"> </i> Engineer</h5>
          </div>
          <ul class=\\"list-group list-group-flush\\">
            <li class=\\"list-group-item\\">ID: 002</li>
            <li class=\\"list-group-item\\">
              Email:<a href=\\"mailto:sam@email.com\\" target=\\"_blank\\">
                sam@email.com</a
              >
            </li>
            <li class=\\"list-group-item\\">
              GitHub:<a href=\\"https://github.com/sam-git\\" target=\\"_blank\\">
                sam-git
              </a>
            </li>
          </ul>
        </div>

        <div class=\\"card col-sm-10 col-md-5 col-lg-3 mr-2 mb-3 p-0\\">
          <div class=\\"card-header bg-primary text-light\\">
            <h3>sun</h3>
            <h5><i class=\\"fas fa-school\\"></i> Intern</h5>
          </div>
          <ul class=\\"list-group list-group-flush\\">
            <li class=\\"list-group-item\\">ID: 004</li>
            <li class=\\"list-group-item\\">
              Email:<a href=\\"mailto:sun@email.com\\" target=\\"_blank\\">
                sun@email.com</a
              >
            </li>
            <li class=\\"list-group-item\\">School: SWA</li>
          </ul>
        </div>
      </section>
    </main>
  </body>
</html>
"
`;
